# Generic_Tools_for_Frequent_Operations

./: CMakeLists.txt  LICENSE  README.md  algorithm.hpp  gtfo.pro  gtfo.vcxproj  gtfo.vcxproj.filters  main.cpp  numeric.hpp  polymorphic_holder.hpp  polymorphic_holder.vcxproj  polymorphic_holder.vcxproj.filters  polymorphic_wrapper.hpp  polymorphic_wrapper.vcxproj  polymorphic_wrapper.vcxproj.filters  test_hierarchy_with_virtual_constructors__wrapper_usage.cpp  testing.cpp  type_traits.hpp
_impl/: type_traits.hpp
_impl/tests/runtime/: runtime_tests.cpp
_impl/tests/static/: static_tests.cpp
_impl/type_traits/: are_addable.hpp  are_multipliable.hpp  are_subtractable.hpp  common_type_2.hpp  has_begin.hpp  has_end.hpp  is_assignable.hpp  is_container.hpp  is_dereferenceable.hpp  is_equality_comparable.hpp  is_incrementable.hpp  is_invokable_fun0.hpp  is_invokable_fun1.hpp  is_invokable_fun2.hpp  is_iterator.hpp  iterator_of_container.hpp  result_of_addition.hpp  result_of_begin.hpp  result_of_dereferencing.hpp  result_of_end.hpp  result_of_fun0.hpp  result_of_fun1.hpp  result_of_fun2.hpp  result_of_multiplication.hpp  result_of_subtraction.hpp  value_from_container.hpp  value_of_dereferenced.hpp
algorithm/: for_each.hpp
gtfo/: algorithm.hpp  functional.hpp  numeric.hpp  reversed_range.hpp
gtfo/_impl/: _common_definitions.hpp  addressof.hpp  iterator_range.hpp  mem.hpp  move.hpp  rbegin_rend.hpp  type_traits.hpp  utility.hpp
gtfo/_impl/functional/: function_object_holder.hpp
gtfo/_impl/type_traits/: _common_definitions.hpp  _type_traits_definitions.hpp  are_addable.hpp  are_comparable_op_eq.hpp  are_comparable_op_greater.hpp  are_comparable_op_greater_or_eq.hpp  are_comparable_op_less.hpp  are_comparable_op_less_or_eq.hpp  are_comparable_op_n_eq.hpp  are_comparable_pred.hpp  are_multipliable.hpp  are_subtractable.hpp  can_apply_array_subscript.hpp  can_be_used_in_boolean_context.hpp  common_type_2.hpp  (+53 more)
gtfo/algorithm/: adjacent_find.hpp  all_of.hpp  any_of.hpp  count.hpp  count_if.hpp  equal.hpp  find.hpp  find_end.hpp  find_first_of.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  is_permutation.hpp  mismatch.hpp  none_of.hpp  search.hpp  search_n.hpp
gtfo/container/: matrix.hpp  polymorphic_holder.hpp
gtfo/functional/: divides.hpp  equal_to.hpp  greater.hpp  greater_equal.hpp  less.hpp  less_equal.hpp  minus.hpp  modulus.hpp  multiplies.hpp  negate.hpp  not_.hpp  not_equal_to.hpp  plus.hpp
gtfo/iterator/: reverse_iterator.hpp
gtfo/numeric/: accumulate.hpp  adjacent_difference.hpp  inner_product.hpp  iota.hpp  partial_sum.hpp
gtfo/utils/: polymorphic_holder.hpp  scope_exit.hpp
gtfo_testing/: gtfo_testing.vcxproj  gtfo_testing.vcxproj.filters
gtfo_testing/runtime/: runtime_tests.cpp  runtime_tests.hpp
gtfo_testing/static/: are_addable.cpp  are_comparable_op_eq.cpp  are_comparable_op_greater.cpp  are_comparable_op_greater_or_eq.cpp  are_comparable_op_less.cpp  are_comparable_op_less_or_eq.cpp  are_comparable_op_n_eq.cpp  are_comparable_pred.cpp  are_multipliable.cpp  are_subtractable.cpp  can_be_used_in_boolean_context.cpp  common_type_2.cpp  has_end.cpp  is_assignable.cpp  is_dereferenceable.cpp  is_incrementable.cpp  is_invokable.cpp  is_invokable_fun0.cpp  is_invokable_fun1.cpp  is_invokable_fun2.cpp  is_iterator.cpp  is_logically_negatable.cpp  is_nothrow_invokable.cpp  is_nothrow_logically_negatable.cpp  is_predicate1.cpp  is_range.cpp  is_range_castable_to_its_iterator.cpp  is_range_with_same_begin_end.cpp  iterator_of_range.cpp  mem_fun_invoke_call_result.cpp  mem_fun_invoke_is_callable.cpp  mem_fun_invoke_is_nothrow_callable.cpp  result_of_addition.cpp  result_of_fun0.cpp  result_of_fun1.cpp  result_of_fun2.cpp  result_of_invocation.cpp  result_of_logical_negation.cpp  result_of_multiplication.cpp  result_of_range_iterator_dereferencing.cpp  (+4 more)
gtfo_tests/runtime/: runtime_tests.cpp  runtime_tests.hpp
gtfo_tests/static/: _old_static_tests.cpp  static_test_are_addable.cpp  static_test_are_comparable_op_eq.cpp  static_test_are_comparable_op_less.cpp  static_test_are_comparable_op_n_eq.cpp  static_test_are_comparable_pred.cpp  static_test_are_multipliable.cpp  static_test_are_subtractable.cpp  static_test_can_be_used_in_boolean_context.cpp  static_test_common_type_2.cpp  static_test_is_assignable.cpp  static_test_is_container.cpp  static_test_is_container_castable_to_its_iterator.cpp  static_test_is_dereferenceable.cpp  static_test_is_equality_comparable.cpp  static_test_is_incrementable.cpp  static_test_is_invokable_fun0.cpp  static_test_is_invokable_fun2.cpp  static_test_is_iterator.cpp  static_test_is_predicate2.cpp  static_test_is_range.cpp  static_test_is_range_castable_to_its_iterator.cpp  static_test_is_range_with_same_begin_end.cpp  static_test_iterator_of_range.cpp  static_test_result_of_addition.cpp  static_test_result_of_begin.cpp  static_test_result_of_dereferencing.cpp  static_test_result_of_end.cpp  static_test_result_of_fun0.cpp  static_test_result_of_fun1.cpp  static_test_result_of_fun2.cpp  static_test_result_of_multiplication.cpp  static_test_result_of_range_iterator_dereferencing.cpp  static_test_result_of_subtraction.cpp  static_test_value_from_range.cpp  static_test_value_of_dereferenced.cpp
numeric/: accumulate.hpp  adjacent_difference.hpp  inner_product.hpp
testing/: hierarchy_with_virtual_constructors.hpp  hierarchy_with_virtual_constructors__derived_classes.cpp  hierarchy_with_virtual_constructors__wrapper_usage.cpp  hierarchy_with_virtual_constructors_derived_classes.cpp  hierarchy_with_virtual_constructors_test.cpp  test_bitwise_copying.cpp  test_bitwise_exclusive_move.cpp  test_hierarchy_with_virtual_constructors.hpp  test_hierarchy_with_virtual_constructors__derived_classes.cpp  test_hierarchy_with_virtual_constructors__wrapper_usage.cpp  test_member_fields_access_through_pointers.cpp  test_no_moving_or_copying.cpp  test_nothrow_moveable_and_throwing_copyable.cpp  test_nothrow_moveable_only.cpp  test_pending_member_function_calls.cpp  test_throwing_moveable_only.cpp  testing.cpp  testing.hpp  testing_common.cpp
(+87 files in other folders)
