cmake_minimum_required(VERSION 3.10)
project(gtfo_testing)

set(CMAKE_CXX_STANDARD 17)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
endif()

include_directories(./)

add_executable(gtfo_testing

        gtfo/numeric/adjacent_difference.hpp
        gtfo/numeric/iota.hpp
        gtfo/numeric/inner_product.hpp
        gtfo/numeric/accumulate.hpp
        gtfo/numeric/partial_sum.hpp
        gtfo/container/polymorphic_holder.hpp
        gtfo/container/matrix.hpp
        gtfo/algorithm.hpp
        gtfo/functional.hpp
        gtfo/numeric.hpp
        gtfo/reversed_range.hpp
        gtfo/functional/less_equal.hpp
        gtfo/functional/minus.hpp
        gtfo/functional/not_equal_to.hpp
        gtfo/functional/equal_to.hpp
        gtfo/functional/greater.hpp
        gtfo/functional/less.hpp
        gtfo/functional/negate.hpp
        gtfo/functional/plus.hpp
        gtfo/functional/not_.hpp
        gtfo/functional/greater_equal.hpp
        gtfo/functional/divides.hpp
        gtfo/functional/modulus.hpp
        gtfo/functional/multiplies.hpp
        gtfo/utils/scope_exit.hpp
        gtfo/algorithm/any_of.hpp
        gtfo/algorithm/is_permutation.hpp
        gtfo/algorithm/search.hpp
        gtfo/algorithm/find_if.hpp
        gtfo/algorithm/find_first_of.hpp
        gtfo/algorithm/none_of.hpp
        gtfo/algorithm/for_each.hpp
        gtfo/algorithm/equal.hpp
        gtfo/algorithm/find_end.hpp
        gtfo/algorithm/find_if_not.hpp
        gtfo/algorithm/adjacent_find.hpp
        gtfo/algorithm/mismatch.hpp
        gtfo/algorithm/search_n.hpp
        gtfo/algorithm/count.hpp
        gtfo/algorithm/all_of.hpp
        gtfo/algorithm/count_if.hpp
        gtfo/algorithm/find.hpp
        gtfo/iterator/reverse_iterator.hpp
        gtfo/_impl/type_traits/can_be_used_in_boolean_context.hpp
        gtfo/_impl/type_traits/value_of_dereferenced.hpp
        gtfo/_impl/type_traits/is_invokable_fun2.hpp
        gtfo/_impl/type_traits/is_forward_iterator.hpp
        gtfo/_impl/type_traits/result_of_logical_negation.hpp
        gtfo/_impl/type_traits/result_of_invocation.hpp
        gtfo/_impl/type_traits/are_comparable_op_greater_or_eq.hpp
        gtfo/_impl/type_traits/has_begin.hpp
        gtfo/_impl/type_traits/value_from_range.hpp
        gtfo/_impl/type_traits/can_apply_array_subscript.hpp
        gtfo/_impl/type_traits/is_iterator.hpp
        gtfo/_impl/type_traits/is_invokable.hpp
        gtfo/_impl/type_traits/is_invokable_fun0.hpp
        gtfo/_impl/type_traits/are_comparable_op_greater.hpp
        gtfo/_impl/type_traits/are_comparable_op_n_eq.hpp
        gtfo/_impl/type_traits/are_comparable_op_less.hpp
        gtfo/_impl/type_traits/result_of_subtraction.hpp
        gtfo/_impl/type_traits/is_output_iterator.hpp
        gtfo/_impl/type_traits/result_of_fun1.hpp
        gtfo/_impl/type_traits/is_logically_negatable.hpp
        gtfo/_impl/type_traits/mem_fun_invoke_is_nothrow_callable.hpp
        gtfo/_impl/type_traits/common_type_2.hpp
        gtfo/_impl/type_traits/result_of_range_iterator_dereferencing.hpp
        gtfo/_impl/type_traits/are_comparable_op_less_or_eq.hpp
        gtfo/_impl/type_traits/is_bidirectional_iterator.hpp
        gtfo/_impl/type_traits/is_nothrow_invokable.hpp
        gtfo/_impl/type_traits/is_dereferenceable.hpp
        gtfo/_impl/type_traits/result_of_end.hpp
        gtfo/_impl/type_traits/is_decrementable.hpp
        gtfo/_impl/type_traits/is_range_with_same_begin_end.hpp
        gtfo/_impl/type_traits/iterator_of_range.hpp
        gtfo/_impl/type_traits/result_of_begin.hpp
        gtfo/_impl/type_traits/result_of_multiplication.hpp
        gtfo/_impl/type_traits/result_of_fun0.hpp
        gtfo/_impl/type_traits/is_nothrow_logically_negatable.hpp
        gtfo/_impl/type_traits/are_comparable_pred.hpp
        gtfo/_impl/type_traits/mem_fun_invoke_is_callable.hpp
        gtfo/_impl/type_traits/are_addable.hpp
        gtfo/_impl/type_traits/is_compound_addable.hpp
        gtfo/_impl/type_traits/is_range_castable_to_its_iterator.hpp
        gtfo/_impl/type_traits/is_range.hpp
        gtfo/_impl/type_traits/is_assignable.hpp
        gtfo/_impl/type_traits/are_multipliable.hpp
        gtfo/_impl/type_traits/are_subtractable.hpp
        gtfo/_impl/type_traits/is_predicate1.hpp
        gtfo/_impl/type_traits/result_of_dereferencing.hpp
        gtfo/_impl/type_traits/result_of_addition.hpp
        gtfo/_impl/type_traits/_type_traits_definitions.hpp
        gtfo/_impl/type_traits/is_invokable_fun1.hpp
        gtfo/_impl/type_traits/mem_fun_invoke_call_result.hpp
        gtfo/_impl/type_traits/are_comparable_op_eq.hpp
        gtfo/_impl/type_traits/is_random_access_iterator.hpp
        gtfo/_impl/type_traits/is_predicate2.hpp
        gtfo/_impl/type_traits/is_incrementable.hpp
        gtfo/_impl/type_traits/has_end.hpp
        gtfo/_impl/type_traits/result_of_fun2.hpp
        gtfo/_impl/type_traits/is_input_iterator.hpp
        gtfo/_impl/type_traits/is_compound_subtractable.hpp
        gtfo/_impl/type_traits/void_t.hpp
        gtfo/_impl/_common_definitions.hpp
        gtfo/_impl/container/matrix/matrix_exceptions.hpp
        gtfo/_impl/container/matrix/matrix_rows_iterator.hpp
        gtfo/_impl/container/matrix/initializer_list_utils.hpp
        gtfo/_impl/functional/function_object_holder.hpp
        gtfo/_impl/mem.hpp
        gtfo/_impl/utility.hpp
        gtfo/_impl/iterator_range.hpp

        gtfo_testing/runtime/numeric/inner_product.cpp
        gtfo_testing/runtime/numeric/accumulate.cpp
        gtfo_testing/runtime/numeric/adjacent_difference.cpp
        gtfo_testing/runtime/numeric/iota.cpp
        gtfo_testing/runtime/numeric/partial_sum.cpp
        gtfo_testing/runtime/runtime_tests.cpp
        gtfo_testing/runtime/runtime_tests.hpp
        gtfo_testing/runtime/container/matrix.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_bitwise_copying.cpp
        gtfo_testing/runtime/container/polymorphic_holder/hierarchy_with_virtual_constructors_derived_classes.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_nothrow_moveable_only.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_nothrow_moveable_and_throwing_copyable.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_pending_member_function_calls.cpp
        gtfo_testing/runtime/container/polymorphic_holder/hierarchy_with_virtual_constructors_test.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_member_fields_access_through_pointers.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_const.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_bitwise_exclusive_move.cpp
        gtfo_testing/runtime/container/polymorphic_holder/test_no_moving_or_copying.cpp
        gtfo_testing/runtime/container/polymorphic_holder/hierarchy_with_virtual_constructors.hpp
        gtfo_testing/runtime/container/polymorphic_holder/test_throwing_moveable_only.cpp
        gtfo_testing/runtime/container/matrix_rows_iterator.cpp
        gtfo_testing/runtime/functional/comparisons.cpp
        gtfo_testing/runtime/functional/not_.cpp
        gtfo_testing/runtime/functional/arithmetic_operations.cpp
        gtfo_testing/runtime/utils/scope_exit.cpp
        gtfo_testing/runtime/algorithm/search_n.cpp
        gtfo_testing/runtime/algorithm/is_permutation.cpp
        gtfo_testing/runtime/algorithm/count.cpp
        gtfo_testing/runtime/algorithm/find_end.cpp
        gtfo_testing/runtime/algorithm/none_of.cpp
        gtfo_testing/runtime/algorithm/count_if.cpp
        gtfo_testing/runtime/algorithm/find_if.cpp
        gtfo_testing/runtime/algorithm/any_of.cpp
        gtfo_testing/runtime/algorithm/find_first_of.cpp
        gtfo_testing/runtime/algorithm/mismatch.cpp
        gtfo_testing/runtime/algorithm/for_each.cpp
        gtfo_testing/runtime/algorithm/equal.cpp
        gtfo_testing/runtime/algorithm/find_if_not.cpp
        gtfo_testing/runtime/algorithm/find.cpp
        gtfo_testing/runtime/algorithm/search.cpp
        gtfo_testing/runtime/algorithm/adjacent_find.cpp
        gtfo_testing/runtime/algorithm/all_of.cpp
        gtfo_testing/static/are_multipliable.cpp
        gtfo_testing/static/mem_fun_invoke_call_result.cpp
        gtfo_testing/static/result_of_subtraction.cpp
        gtfo_testing/static/is_logically_negatable.cpp
        gtfo_testing/static/has_end.cpp
        gtfo_testing/static/result_of_begin.cpp
        gtfo_testing/static/result_of_fun1.cpp
        gtfo_testing/static/can_be_used_in_boolean_context.cpp
        gtfo_testing/static/are_comparable_op_n_eq.cpp
        gtfo_testing/static/result_of_fun0.cpp
        gtfo_testing/static/result_of_invocation.cpp
        gtfo_testing/static/static_test_functional_not_.cpp
        gtfo_testing/static/result_of_end.cpp
        gtfo_testing/static/result_of_multiplication.cpp
        gtfo_testing/static/are_comparable_op_eq.cpp
        gtfo_testing/static/is_nothrow_logically_negatable.cpp
        gtfo_testing/static/is_nothrow_invokable.cpp
        gtfo_testing/static/are_comparable_op_less_or_eq.cpp
        gtfo_testing/static/mem_fun_invoke_is_callable.cpp
        gtfo_testing/static/result_of_dereferencing.cpp
        gtfo_testing/static/iterator_of_range.cpp
        gtfo_testing/static/is_invokable_fun0.cpp
        gtfo_testing/static/is_range.cpp
        gtfo_testing/static/mem_fun_invoke_is_nothrow_callable.cpp
        gtfo_testing/static/are_comparable_op_less.cpp
        gtfo_testing/static/is_invokable.cpp
        gtfo_testing/static/is_predicate2.cpp
        gtfo_testing/static/value_of_dereferenced.cpp
        gtfo_testing/static/are_comparable_op_greater.cpp
        gtfo_testing/static/is_invokable_fun2.cpp
        gtfo_testing/static/value_from_range.cpp
        gtfo_testing/static/are_comparable_op_greater_or_eq.cpp
        gtfo_testing/static/is_predicate1.cpp
        gtfo_testing/static/result_of_logical_negation.cpp
        gtfo_testing/static/result_of_addition.cpp
        gtfo_testing/static/result_of_range_iterator_dereferencing.cpp
        gtfo_testing/static/is_incrementable.cpp
        gtfo_testing/static/common_type_2.cpp
        gtfo_testing/static/is_range_castable_to_its_iterator.cpp
        gtfo_testing/static/is_invokable_fun1.cpp
        gtfo_testing/static/result_of_fun2.cpp
        gtfo_testing/static/is_iterator.cpp
        gtfo_testing/static/is_range_with_same_begin_end.cpp
        gtfo_testing/static/are_addable.cpp
        gtfo_testing/static/has_begin.cpp
        gtfo_testing/static/are_subtractable.cpp
        gtfo_testing/static/are_comparable_pred.cpp
        gtfo_testing/static/is_assignable.cpp
        gtfo_testing/static/is_dereferenceable.cpp)
